--- a/BerlinClock.csproj
+++ b/BerlinClock.csproj
@@ -50,6 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BDD\BerlinClockFeatureSteps.cs" />
+    <Compile Include="Classes\IClockRenderer.cs" />
+    <Compile Include="Classes\ITimeParser.cs" />
+    <Compile Include="Classes\TextClockRenderer.cs" />
+    <Compile Include="Classes\Time24hParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BDD\BerlinClockFeatureSteps.feature.cs">
       <AutoGen>True</AutoGen>
